--- a/ss.html
+++ b/ss.html
@@ -91,7 +91,7 @@
 <body>
 
   <h2 style="text-align: center;">Timeline</h2>
-  <div class="timeline content" id="timelineContainer"></div>
+  <div class="timeline " id="timelineContainer"></div>
 
   <script>
   fetch('data.csv')
